# sms_analysis_fast

AndroidStudioProjects/sms_analyst_admin/: README.md  pubspec.yaml
AndroidStudioProjects/sms_analyst_admin/android/app/: build.gradle.kts
AndroidStudioProjects/sms_analyst_admin/android/app/src/main/: AndroidManifest.xml
AndroidStudioProjects/sms_analyst_admin/ios/Runner/: Info.plist
AndroidStudioProjects/sms_analyst_admin/ios/Runner.xcodeproj/: project.pbxproj
AndroidStudioProjects/sms_analyst_admin/lib/: api.dart  main.dart
AndroidStudioProjects/sms_analyst_admin/lib/screens/: home_screen.dart  login_screen.dart
AndroidStudioProjects/sms_analyst_admin/linux/: CMakeLists.txt
AndroidStudioProjects/sms_analyst_admin/linux/runner/: my_application.cc
AndroidStudioProjects/sms_analyst_admin/macos/Runner.xcodeproj/: project.pbxproj
AndroidStudioProjects/sms_analyst_admin/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
AndroidStudioProjects/sms_analyst_admin/macos/Runner/Configs/: AppInfo.xcconfig
AndroidStudioProjects/sms_analyst_admin/test/: widget_test.dart
AndroidStudioProjects/sms_analyst_admin/web/: index.html  manifest.json
AndroidStudioProjects/sms_analyst_admin/windows/: CMakeLists.txt
AndroidStudioProjects/sms_analyst_admin/windows/runner/: Runner.rc  main.cpp
Kiro/agripulse/: README.md  pubspec.yaml
Kiro/agripulse/android/app/: build.gradle
Kiro/agripulse/android/app/src/main/: AndroidManifest.xml
Kiro/agripulse/assets/3d_visualization/: agripulse-3d.js  index.html
Kiro/agripulse/ios/Runner/: Info.plist
Kiro/agripulse/ios/Runner.xcodeproj/: project.pbxproj
Kiro/agripulse/lib/: main.dart
Kiro/agripulse/lib/bloc/dashboard/: dashboard_bloc.dart  dashboard_event.dart  dashboard_state.dart
Kiro/agripulse/lib/data/: mock_service.dart  models.dart
Kiro/agripulse/lib/models/: models.dart
Kiro/agripulse/lib/screens/: alerts_screen.dart  dashboard_screen.dart  map_screen.dart  search_screen.dart  visualization_3d_screen.dart
Kiro/agripulse/lib/theme/: app_theme.dart
Kiro/agripulse/linux/runner/: my_application.cc
Kiro/agripulse/macos/Runner.xcodeproj/: project.pbxproj
Kiro/agripulse/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
Kiro/agripulse/macos/Runner/Configs/: AppInfo.xcconfig
Kiro/agripulse/test/: widget_test.dart
Kiro/agripulse/web/: index.html
Kiro/agripulse/windows/runner/: Runner.rc
Kiro/ai-gdp-calculator/: .gitignore  README.md  SYSTEM_OVERVIEW.md  api.py  config.json  dashboard.py  data_ingestion.py  data_preprocessing.py  fusion_engine.py  ml_model.py  requirements.txt  satellite_module.py  social_media_module.py  start_system.sh  test_system.py
Kiro/dcews/: .gitignore  README.md  app.py  demo.py  generate_data.py  launch.sh  train_model.py
Kiro/dcews/data/: debt_data.csv
Kiro/econobridge-platform/: README.md  package-lock.json  package.json
Kiro/econobridge-platform/client/: index.html  package-lock.json  package.json  tailwind.config.js
Kiro/econobridge-platform/client/src/: App.jsx
Kiro/econobridge-platform/client/src/components/: AdminDashboard.jsx  CreditScore.jsx  Dashboard.jsx  Login.jsx  Navbar.jsx  SendMoney.jsx
Kiro/econobridge-platform/server/: index.js
Kiro/proofOfFace/: .env.example  .gitignore  Makefile  README-SETUP.md  README.md  docker-compose.yml  package.json
Kiro/proofOfFace/ai-service/: AI_SERVICE_SUMMARY.md  Dockerfile  ENHANCED_FACE_PROCESSOR_SUMMARY.md  FINAL_TEST_SUMMARY.md  FLASK_TEST_RESULTS.md  README.md  app_minimal.py  config.py  face_processing_test_results.json  init.sql  requirements.txt  start.sh  test_app_basic.py  test_app_startup.py  test_auto_fallback.py  test_embedding_encryption_demo.py  test_embeddings_simple.py  test_encryption_basic.py  test_enhanced_api.py  test_output.py  test_results.txt  test_service.py  test_simple.py  test_with_sample_images.py
Kiro/proofOfFace/ai-service/tests/: test_embedding_encryption.py  test_face_processor_embeddings.py
Kiro/proofOfFace/ai-service/utils/: __init__.py  encryption.py  face_processor.py  face_processor_mock.py  face_processor_simple.py
Kiro/proofOfFace/contracts/: Cargo.toml  README.md
Kiro/proofOfFace/contracts/src/: identity_registry.rs  lib.rs
Kiro/proofOfFace/contracts/test_contract/: Cargo.toml  lib.rs
Kiro/proofOfFace/docs/: README.md  architecture.md  setup.md  troubleshooting.md
Kiro/proofOfFace/frontend/: Dockerfile  README.md  nginx.conf  package.json
Kiro/proofOfFace/frontend/src/: App.tsx
Kiro/proofOfFace/frontend/src/components/: Header.tsx
Kiro/proofOfFace/frontend/src/pages/: DashboardPage.tsx  HomePage.tsx  RegisterPage.tsx  VerifyPage.tsx
Kiro/proofOfFace/frontend/src/styles/: globals.css
Kiro/proofOfFace/scripts/: deploy.sh  health-check.sh  setup.sh
Kiro/proofOfFace/substrate-node/: BUILD-STATUS.md  Cargo.toml  Dockerfile  INTEGRATION_SUMMARY.md  QUICK_START.md  README.md  RUNTIME_CONFIGURATION.md  TEST_RESULTS.md  build-commands.md  build-runtime.sh  quick-test.sh  run-dev-node.sh  test-build.sh  test-integration.sh  verify-build.sh  verify-integration.sh
Kiro/proofOfFace/substrate-node/node/: Cargo.toml
Kiro/proofOfFace/substrate-node/node/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  rpc.rs  service.rs
Kiro/proofOfFace/substrate-node/pallets/proofofface/: Cargo.toml  REGISTER_IDENTITY.md  VERIFY_IDENTITY.md
Kiro/proofOfFace/substrate-node/pallets/proofofface/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
Kiro/proofOfFace/substrate-node/runtime/: Cargo.toml
Kiro/proofOfFace/substrate-node/runtime/src/: lib.rs
Kiro/proofOfFace/substrate-node/src/: main.rs
PycharmProjects/FlaskProject/: main.py
PycharmProjects/FlaskProject/instance/: sms_analyst.db
PycharmProjects/fastSMS/: main.py
PycharmProjects/iga/: README.md  app.py  base_donnees_chatbot_mastere.json  chatbot_database_mastere_ub.json  index_build.py  requirements.txt  server.py
PycharmProjects/iga/index/: bm25.pkl  docs.txt  embeddings.npy  faiss.index  items.json  norm_docs.txt
(+2 files in other folders)
