[package]
name = "proofofface-contracts"
version = "0.1.0"
edition = "2021"
authors = ["ProofOfFace Team"]

[dependencies]
ink = { version = "5.1.1", default-features = false }
parity-scale-codec = { version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

[lib]
name = "proofofface_contracts"
path = "src/lib.rs"
crate-type = [
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "parity-scale-codec/std",
    "scale-info/std",
]
ink-as-dependency = []