[package]
name = "test_contract"
version = "0.1.0"
authors = ["ProofOfFace Team"]
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }
parity-scale-codec = { version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

[lib]
name = "test_contract"
path = "lib.rs"
crate-type = [
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "parity-scale-codec/std",
    "scale-info/std",
]